--- a/index.html
+++ b/index.html
@@ -48,11 +48,19 @@
         font-size: 20px;
         justify-content: center;
       }
+      @media (max-width: 600px) {
+        .cebian {
+          display: none;
+        }
+        .neirong {
+          flex-direction: column;
+        }
+      }
     </style>
   </head>
   <body class="flex">
     <!--侧边栏-->
-    <div style="width: 150px; align-content: space-around" class="Heise">
+    <div style="width: 150px; align-content: space-around" class="cebian Heise">
       <div class="daohang">回归故事</div>
       <div class="daohang" style="margin-top: 11vw; margin-bottom: 11vw">
         转移意识
@@ -64,7 +72,7 @@
       <div1 style="height: 60px; z-index: 2" class="Heise">称号</div1>
       <div class="flex1 flex column Heise">
         <!--中-->
-        <div style="flex: 3" class="flex row Heise">
+        <div style="flex: 3" class="flex Heise neirong">
           <div1
             style="
               flex: 3;
