--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           </div>
         </div>
         <!--下-->
-        <div1 style="flex: 1; z-index: 2" class="flex Heise"> 称号技能: </div1>
+        <div1 style="flex: 1; z-index: 2" class="flex Heise"> 称号技能</div1>
       </div>
     </div>
   </body>
