--- a/index.html
+++ b/index.html
@@ -55,6 +55,12 @@
         .neirong {
           flex-direction: column;
         }
+        .ziti1{
+          font-size: 5vh;
+        }
+        .ziti2{
+          font-size: 3vh;
+        }
       }
     </style>
   </head>
@@ -69,7 +75,7 @@
     </div>
     <!--内容区-->
     <div class="flex1 flex column">
-      <div1 style="height: 60px; z-index: 2" class="Heise">称号</div1>
+      <div1 style="height: 60px; z-index: 2" class="Heise ziti1">称号</div1>
       <div class="flex1 flex column Heise">
         <!--中-->
         <div style="flex: 3" class="flex Heise neirong">
@@ -84,7 +90,7 @@
               line-height: 55px;
               max-height: 80vh;
             "
-            class="flex Heise column"
+            class="flex Heise column ziti2"
           >
             姓名：<br />
             年龄：<br />
@@ -103,11 +109,11 @@
             理智：
           </div1>
           <div style="flex: 2" class="flex Heise">
-            <p>图片</p>
+            <p></p>
           </div>
         </div>
         <!--下-->
-        <div1 style="flex: 1; z-index: 2" class="flex Heise"> 称号技能</div1>
+        <div1 style="flex: 1; z-index: 2" class="flex Heise ziti1"> 称号技能</div1>
       </div>
     </div>
   </body>
