--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
         .ziti2 {
           font-size: 3vh;
         }
+
+         .button1 {
+        font-size: 4vh; /* 调整按钮字体大小 */
+      }
       }
     </style>
   </head>
