--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         }
 
         .button1 {
-          font-size: 2vh; /* 调整按钮字体大小 */
+          font-size: 2vh!important; /* 调整按钮字体大小 */
         }
 
         @media (max-width: 480px) {
@@ -117,7 +117,7 @@
             font-size: 2.5vh;
           }
           .button1 {
-            font-size: 2vh;
+            font-size: 2vh!important;
           }
         }
       }
