--- a/index.html
+++ b/index.html
@@ -339,6 +339,11 @@
     </script>
     <!-- ... existing code ... -->
     <style>
+      #password-container {
+    display: flex; /* 启用 flexbox 布局 */
+    justify-content: center; /* 水平居中 */
+    align-items: center; /* 垂直居中 */
+  }
       /* 密码输入框样式 */
       .password-input {
         padding: 10px;
