--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 setTimeout(() => {
                   passwordContainer.innerHTML = "";
                   var passwordImage = document.createElement("img");
-                  passwordImage.src = "your-image-url.jpg"; // 替换为你的图片 URL
+                  passwordImage.src = "https://i.imgur.com/LlghAkr.jpeg"; // 替换为你的图片 URL
                   passwordImage.classList.add("password-image");
                   passwordContainer.appendChild(passwordImage);
                   passwordImage.style.display = "block";
@@ -300,7 +300,7 @@
               } else {
                 passwordContainer.innerHTML = "";
                 var passwordImage = document.createElement("img");
-                passwordImage.src = "your-image-url.jpg"; // 替换为你的图片 URL
+                passwordImage.src = "https://i.imgur.com/LlghAkr.jpeg"; // 替换为你的图片 URL
                 passwordImage.classList.add("password-image");
                 passwordContainer.appendChild(passwordImage);
                 passwordImage.style.display = "block";
@@ -330,7 +330,7 @@
         switchPage("属性");
         var passwordContainer = document.getElementById("password-container");
         var passwordImage = document.createElement("img");
-        passwordImage.src = "your-image-url.jpg"; // 替换为你的图片 URL
+        passwordImage.src = "https://i.imgur.com/LlghAkr.jpeg"; // 替换为你的图片 URL
         passwordImage.classList.add("password-image");
         passwordContainer.appendChild(passwordImage);
         passwordImage.style.display = "block";
