--- a/index.html
+++ b/index.html
@@ -106,19 +106,239 @@
         }
 
         .button1 {
-          font-size: 2vh !important; /* 调整按钮字体大小 */
+          font-size: 2vh !important;
+          /* 调整按钮字体大小 */
         }
 
         @media (max-width: 480px) {
           .ziti1 {
             font-size: 3vh;
           }
+
           .ziti2 {
             font-size: 2.5vh;
           }
+
           .button1 {
-            font-size: 2vh !important; /* 强制调整按钮字体大小 */
+            font-size: 2vh !important;
+            /* 强制调整按钮字体大小 */
           }
+        }
+      }
+
+      #password-container {
+        display: flex;
+        /* 启用 flexbox 布局 */
+        justify-content: center;
+        /* 水平居中 */
+        align-items: center;
+        /* 垂直居中 */
+        position: relative;
+        /* 设置相对定位，方便图片绝对定位 */
+        width: 100%;
+        /* 确保容器宽度为 100% */
+        max-height: calc(100vh - 10vh);
+        overflow: hidden;
+        /* 防止图片溢出容器 */
+      }
+
+      .password-image {
+        max-width: 100%;
+        height: auto;
+        opacity: 0;
+        display: none;
+        transition: opacity 0.5s ease;
+        width: 100%;
+        /* 设置图片宽度为 100% */
+        height: 100%;
+        /* 设置图片高度为 100% */
+        object-fit: cover;
+        /* 让图片覆盖整个容器且保持比例 */
+        position: absolute;
+        /* 绝对定位，使其充满容器 */
+        top: 0;
+        left: 0;
+        right: 0;
+        /* 添加 right 属性 */
+        bottom: 0;
+        /* 添加 bottom 属性 */
+        margin: auto;
+        /* 水平和垂直居中 */
+      }
+
+      .button1.flex.Heise.ziti2 {
+        /* 确保底部栏有固定高度 */
+        height: 10vh;
+        z-index: 2;
+      }
+
+      .password-info-text {
+        color: aliceblue;
+        font-size: 2.5vh;
+        font-family: "楷体";
+        display: none;
+        font-weight: bold;
+        text-shadow: 0 0 5px aliceblue;
+        z-index: 3;
+        opacity: 0; /* 初始透明度为 0 */
+      }
+
+      /* 密码输入框样式 */
+      .password-input {
+        padding: 10px;
+        border: 1px solid aliceblue;
+        border-radius: 5px;
+        margin-right: 10px;
+        outline: none;
+        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
+        background-color: black;
+        color: aliceblue;
+        font-family: "楷体";
+        font-size: 2vw;
+      }
+
+      /* 提交按钮样式 */
+      .password-submit {
+        padding: 10px 20px;
+        background-color: black;
+        color: aliceblue;
+        font-family: "楷体";
+        font-size: 2vw;
+        border: 1px solid aliceblue;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s ease;
+      }
+
+      /* 按钮样式 */
+      .button1 {
+        background-color: black;
+        color: aliceblue;
+        font-size: 5vh;
+        font-family: "楷体";
+        justify-content: center;
+        align-items: center;
+        border: 1px solid transparent;
+        /* 初始设置透明边框，避免按钮抖动 */
+        border-radius: 5px;
+        transition: border 0.3s ease;
+        /* 添加过渡效果 */
+      }
+
+      .button1:hover {
+        border: 2px solid aliceblue;
+        /* 添加 hover 边框效果 */
+      }
+
+      /* 淡入动画 */
+      @keyframes fadeIn {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 1;
+        }
+      }
+
+      /* 淡出动画 */
+      @keyframes fadeOut {
+        from {
+          opacity: 1;
+        }
+        to {
+          opacity: 0;
+        }
+      }
+
+      /* 条纹频闪动画 */
+      @keyframes signalNoise {
+        0% {
+          background-position: 0 0;
+          opacity: 0.8;
+        }
+
+        10% {
+          background-position: 10px 20px;
+          opacity: 0.6;
+        }
+
+        20% {
+          background-position: -20px -10px;
+          opacity: 0.9;
+        }
+
+        30% {
+          background-position: 30px 30px;
+          opacity: 0.7;
+        }
+
+        40% {
+          background-position: -30px -20px;
+          opacity: 0.8;
+        }
+
+        50% {
+          background-position: 20px -30px;
+          opacity: 0.6;
+        }
+
+        60% {
+          background-position: -10px 20px;
+          opacity: 0.9;
+        }
+
+        70% {
+          background-position: 30px -10px;
+          opacity: 0.7;
+        }
+
+        80% {
+          background-position: -20px 30px;
+          opacity: 0.8;
+        }
+
+        90% {
+          background-position: 10px -20px;
+          opacity: 0.6;
+        }
+
+        100% {
+          background-position: 0 0;
+          opacity: 0.8;
+        }
+      }
+
+      .signal-noise {
+        background-image: repeating-linear-gradient(
+          0deg,
+          rgba(255, 255, 255, 0.1),
+          rgba(255, 255, 255, 0.1) 1px,
+          transparent 1px,
+          transparent 2px
+        );
+        animation: signalNoise 0.5s infinite linear;
+      }
+
+      /* 图片样式 */
+      .password-image {
+        max-width: 100%;
+        height: auto;
+        opacity: 0;
+        display: none;
+        transition: opacity 0.5s ease;
+      }
+
+      @keyframes redFlash {
+        0% {
+          background-color: transparent;
+        }
+
+        50% {
+          background-color: rgba(255, 0, 0, 0.5);
+        }
+
+        100% {
+          background-color: transparent;
         }
       }
     </style>
@@ -235,6 +455,9 @@
               passwordContainer.querySelector(".password-input");
             var submitButton =
               passwordContainer.querySelector(".password-submit");
+            var errorTip = passwordContainer.querySelector(
+              ".password-error-tip"
+            );
 
             if (to === "称号技能") {
               if (passwordImage) {
@@ -249,12 +472,20 @@
                   input.type = "password";
                   input.placeholder = "请输入密钥";
                   input.classList.add("password-input");
-                  input.style.opacity = 0; // 初始透明度为 0
+                  input.style.opacity = 0;
+                  // 初始透明度为 0
                   // 创建提交按钮
                   var submitButton = document.createElement("button");
                   submitButton.textContent = "访问";
                   submitButton.classList.add("password-submit");
-                  submitButton.style.opacity = 0; // 初始透明度为 0
+                  submitButton.style.opacity = 0;
+                  // 初始透明度为 0
+                  var infoText = document.createElement("p");
+                  infoText.textContent = "你真的确定吗？";
+                  infoText.classList.add("password-info-text");
+                  infoText.style.display = "none";
+                  passwordContainer.appendChild(infoText);
+
                   // 绑定提交按钮事件
                   submitButton.addEventListener("click", () => {
                     var password = input.value;
@@ -266,7 +497,24 @@
                         document.body.classList.remove("signal-noise");
                       }, 1500);
                     } else {
-                      alert("密码错误，请重试。");
+                      // 隐藏密码框和提交按钮
+                      input.style.display = "none";
+                      submitButton.style.display = "none";
+                      infoText.style.display = "block";
+                      infoText.style.animation =
+                        "fadeIn 0.5s ease-in-out forwards";
+                      setTimeout(() => {
+                        // 隐藏普通文字
+                        infoText.style.animation =
+                          "fadeOut 0.5s ease-in-out forwards";
+                        setTimeout(() => {
+                          infoText.style.display = "none";
+                          // 重新显示密码框和提交按钮
+                          input.style.display = "block";
+                          submitButton.style.display = "block";
+                          input.value = "";
+                        }, 500); // 淡出动画时长
+                      }, 1000);
                     }
                   });
                   // 将输入框和按钮添加到容器
@@ -277,7 +525,8 @@
                     input.style.animation = "fadeIn 0.5s ease-in-out forwards";
                     submitButton.style.animation =
                       "fadeIn 0.5s ease-in-out forwards";
-                  }, 10); // 稍微延迟一点确保动画正常触发
+                  }, 10);
+                  // 稍微延迟一点确保动画正常触发
                 }, 500);
               }
             } else {
@@ -290,7 +539,8 @@
                   passwordContainer.innerHTML = "";
                   var passwordImage = document.createElement("img");
                   passwordImage.src =
-                    "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg"; // 替换为你的图片 URL
+                    "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg";
+                  // 替换为你的图片 URL
                   passwordImage.classList.add("password-image");
                   passwordContainer.appendChild(passwordImage);
                   passwordImage.style.display = "block";
@@ -302,7 +552,8 @@
                 passwordContainer.innerHTML = "";
                 var passwordImage = document.createElement("img");
                 passwordImage.src =
-                  "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg"; // 替换为你的图片 URL
+                  "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg";
+                // 替换为你的图片 URL
                 passwordImage.classList.add("password-image");
                 passwordContainer.appendChild(passwordImage);
                 passwordImage.style.display = "block";
@@ -313,6 +564,7 @@
             }
           });
         };
+
         for (var i = 0; i < buttons.length; i++) {
           var attrs = buttons[i].attributes;
           for (var j = 0; j < attrs.length; j++) {
@@ -332,177 +584,17 @@
         switchPage("属性");
         var passwordContainer = document.getElementById("password-container");
         var passwordImage = document.createElement("img");
-        passwordImage.src = "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg"; // 替换为你的图片 URL
+        passwordImage.src = "https://s21.ax1x.com/2025/03/18/pEdbDU0.jpg";
         passwordImage.classList.add("password-image");
         passwordContainer.appendChild(passwordImage);
         passwordImage.style.display = "block";
         passwordImage.style.animation = "fadeIn 0.5s ease-in-out forwards";
+        var errorTip = document.createElement("p");
+        errorTip.textContent = "你真的确定吗？";
+        errorTip.classList.add("password-error-tip");
+        infoText.style.display = "none";
+        passwordContainer.appendChild(errorTip);
       });
     </script>
-    <!-- ... existing code ... -->
-    <style>
-      #password-container {
-        display: flex; /* 启用 flexbox 布局 */
-        justify-content: center; /* 水平居中 */
-        align-items: center; /* 垂直居中 */
-        position: relative; /* 设置相对定位，方便图片绝对定位 */
-        width: 100%; /* 确保容器宽度为 100% */
-        max-height: calc(100vh - 10vh);
-        overflow: hidden; /* 防止图片溢出容器 */
-      }
-      .password-image {
-        max-width: 100%;
-        height: auto;
-        opacity: 0;
-        display: none;
-        transition: opacity 0.5s ease;
-        width: 80%; /* 设置图片宽度为 100% */
-        height: 80%; /* 设置图片高度为 100% */
-        object-fit: cover; /* 让图片覆盖整个容器且保持比例 */
-        position: absolute; /* 绝对定位，使其充满容器 */
-        top: 0;
-        left: 0;
-
-        right: 0; /* 添加 right 属性 */
-        bottom: 0; /* 添加 bottom 属性 */
-        margin: auto; /* 水平和垂直居中 */
-      }
-      .button1.flex.Heise.ziti2 {
-        /* 确保底部栏有固定高度 */
-        height: 10vh;
-        z-index: 2;
-      }
-      /* 密码输入框样式 */
-      .password-input {
-        padding: 10px;
-        border: 1px solid aliceblue;
-        border-radius: 5px;
-        margin-right: 10px;
-        outline: none;
-        box-shadow: 0 0 10px rgba(255, 255, 255, 0.5);
-        background-color: black;
-        color: aliceblue;
-        font-family: "楷体";
-        font-size: 2vw;
-      }
-
-      /* 提交按钮样式 */
-      .password-submit {
-        padding: 10px 20px;
-        background-color: black;
-        color: aliceblue;
-        font-family: "楷体";
-        font-size: 2vw;
-        border: 1px solid aliceblue;
-        border-radius: 5px;
-        cursor: pointer;
-        transition: background-color 0.3s ease;
-      }
-
-      /* 按钮样式 */
-      .button1 {
-        background-color: black;
-        color: aliceblue;
-        font-size: 5vh;
-        font-family: "楷体";
-        justify-content: center;
-        align-items: center;
-        border: 1px solid transparent; /* 初始设置透明边框，避免按钮抖动 */
-        border-radius: 5px;
-        transition: border 0.3s ease; /* 添加过渡效果 */
-      }
-
-      .button1:hover {
-        border: 2px solid aliceblue; /* 添加 hover 边框效果 */
-      }
-
-      /* 淡入动画 */
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
-      }
-
-      /* 淡出动画 */
-      @keyframes fadeOut {
-        from {
-          opacity: 1;
-        }
-        to {
-          opacity: 0;
-        }
-      }
-
-      /* 条纹频闪动画 */
-      @keyframes signalNoise {
-        0% {
-          background-position: 0 0;
-          opacity: 0.8;
-        }
-        10% {
-          background-position: 10px 20px;
-          opacity: 0.6;
-        }
-        20% {
-          background-position: -20px -10px;
-          opacity: 0.9;
-        }
-        30% {
-          background-position: 30px 30px;
-          opacity: 0.7;
-        }
-        40% {
-          background-position: -30px -20px;
-          opacity: 0.8;
-        }
-        50% {
-          background-position: 20px -30px;
-          opacity: 0.6;
-        }
-        60% {
-          background-position: -10px 20px;
-          opacity: 0.9;
-        }
-        70% {
-          background-position: 30px -10px;
-          opacity: 0.7;
-        }
-        80% {
-          background-position: -20px 30px;
-          opacity: 0.8;
-        }
-        90% {
-          background-position: 10px -20px;
-          opacity: 0.6;
-        }
-        100% {
-          background-position: 0 0;
-          opacity: 0.8;
-        }
-      }
-
-      .signal-noise {
-        background-image: repeating-linear-gradient(
-          0deg,
-          rgba(255, 255, 255, 0.1),
-          rgba(255, 255, 255, 0.1) 1px,
-          transparent 1px,
-          transparent 2px
-        );
-        animation: signalNoise 0.5s infinite linear;
-      }
-
-      /* 图片样式 */
-      .password-image {
-        max-width: 100%;
-        height: auto;
-        opacity: 0;
-        display: none;
-        transition: opacity 0.5s ease;
-      }
-    </style>
   </body>
 </html>
