--- a/LoadingBody/SuMing/index.html
+++ b/LoadingBody/SuMing/index.html
@@ -394,8 +394,16 @@
             体重：46kg<br />
             外貌：鲜红色垂地长发，金色眼，头发通常以回折的方式绑短至小腿位置成一长辫，也会向上编进金色的轻细装饰品。齐刘海，头顶一淡黄色发箍，身穿贴身款抹胸高叉裙，平跟绑带凉鞋。<br />
             妄想体：一只淡红色长着纯白斑点的半透明梅花鹿，颈部缠绕着树藤。<br />
-            背景经历：<br />
-            特殊物品：<br />
+            背景经历：你听过凌晨三点的铃铛声吗？<br />
+            叮铃铃——叮铃铃——手腕上的红绳响起，飞舞着带你走向绝对安全的深邃。<br />
+            不要回头看。<br />
+            她自称是一名怪谈讲述人。<br />
+            是编造，还是真正见过这所有的故事？<br />
+            谜语人气息，出场自带香气，擅长说话说一半，把很离奇的故事用各种修饰词讲得像真实事件问解答就是一个“如你所想”，进行长时间思考或表达之前要进行仪式性动作。把自己的过去描述成诡异档案，每次都是不同的剧情似乎可以拼凑成同一段故事，而她脸上是对谁可以把这段秘密解出来的期待。<br />
+            ……好吧，她是一位怪谈讲述人，也许是高中毕业正值高创造力的年纪，仗着家底厚实以兴趣的名义前往多处旅行，日志稳定更新也算是工作。注册有多个论坛账号以匿名盖楼描述拉高景点的知名度，使得许多人跟着消息去寻找，是真实，还是梦？<br />
+            不，等一下，谁说她只有二十岁的？<br />
+            特殊物品：左手五指都有镶嵌不同宝石的金指环，自称是用来做什么法的……什么法事？用上就知道了。<br />
+            头绳末端是个没有装芯的铃铛，据说遇到危险才会响起来——只有自己听得见。<br />
             想象力：10（由一只手创作一只灵魂）<br />
             记忆力：6（只能记住感兴趣的......）<br />
             逻辑：5（志怪者万能借口，怪力乱神）<br />
@@ -417,7 +425,15 @@
             "
             class="flex Heise column ziti2"
           >
-            称号技能：<br />你说出的诅咒语句会以相反的形式实现。<br />你的祝福语句视作诅咒语句。
+            称号技能：<br />你说出的诅咒语句会以相反的形式实现。<br />你的祝福语句视作诅咒语句。<br /><br />
+            不为人知的所有事：<br />
+            本姓九重，九重秋叶算是艺称，但在很多人都以为九重是简称后顺其自然上位了。<br />
+            有个弟弟到处说他姐是江湖骗子，但是姐控，大概是唯一知道她背景的网络潮人。<br />
+            真的是20岁挂名大学生，考上了普通大学文学系但是还没去。<br />
+            喜欢听鬼故事，也真心实意相信世界上有鬼，用故事记录那添油加醋的不知道谁的身后事。<br />
+            真见鬼了就跟鬼聊，对面急了也是本事。<br />
+            没学过驱鬼和沟通但是会展示气势严肃说出一些有的没的，鬼怪听懂就是撞大运。<br />
+            为了尝试一些可能性可以让生命没那么重要，但更看重故事性，所以不会主动破坏主线。<br />
           </div1>
           <div style="flex: 2" class="flex Heise">
             <p id="password-container"></p>
